# oar-scheduler-redox

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  flake.nix  justfile  python-config  tarpaulin-report.html
.github/workflows/: ci.yaml
benchmarks/: 6_benchmarked_function_times.md
oar-scheduler-bench/: Cargo.toml  README.md
oar-scheduler-bench/src/: adapter.py  benchmarker.rs  grapher.rs  main.rs  platform_mock.rs  python_caller.rs
oar-scheduler-core/: Cargo.toml  README.md
oar-scheduler-core/src/: hooks.rs  lib.rs  model.rs  models.rs  platform.rs  scheduler.rs
oar-scheduler-core/src/model/: configuration.rs  configuration_python.rs  job.rs  python.rs
oar-scheduler-core/src/scheduler/: calendar.rs  hierarchy.rs  kamelot.rs  quotas.rs  quotas_parsing.rs  scheduling.rs  slot.rs  slotset.rs  sorting.rs  tests.rs
oar-scheduler-core/src/scheduler/tests/: container_test.rs  dependencies_test.rs  hierarchy_test.rs  placeholder_test.rs  platform_mock.rs  quotas_parsing_test.rs  quotas_test.rs  slot_test.rs  temporal_quotas_test.rs  time_sharing_test.rs
oar-scheduler-dao/: Cargo.toml
oar-scheduler-dao/src/: lib.rs  model.rs
oar-scheduler-dao/src/database/: example.rs
oar-scheduler-dao/src/model/: configuration.rs  configuration_py.rs
oar-scheduler-db/: Cargo.toml  README.md
oar-scheduler-db/src/: example.rs  lib.rs  model.rs
oar-scheduler-db/src/model/: admin.rs  events.rs  gantt.rs  job_dependencies.rs  job_types.rs  jobs.rs  moldable.rs  queues.rs  resources.rs
oar-scheduler-db/src/sql/: delete-sqlite.sql  reset-resources-postgres.sql  reset-resources-sqlite.sql  truncate-postgres.sql  up-postgres.sql  up-sqlite.sql
oar-scheduler-hooks/: Cargo.toml  README.md
oar-scheduler-hooks/src/: lib.rs
oar-scheduler-meta/: .env.example  Cargo.toml  README.md  oar_config.env  oar_config.toml  quotas_config.json
oar-scheduler-meta/src/: main.rs  meta_schedule.rs  platform.rs  queues_schedule.rs  test.rs
oar-scheduler-meta/src/test/: job_test.rs  queues_test.rs  quotas_test.rs  resources.rs  resources_test.rs
oar-scheduler-redox/: .env.example  Cargo.toml  README.md  pyproject.toml
oar-scheduler-redox/src/: converters.rs  lib.rs  platform.rs  test.rs
oar3-rust-macros/: Cargo.toml
oar3-rust-macros/src/: lib.rs
oar3-rust-scheduler/: Cargo.toml
oar3-rust-scheduler-bench/: Cargo.toml
oar3-rust-scheduler-bench/src/: benchmarker.rs  main.rs  platform_mock.rs  python_caller.rs
oar3-rust-scheduler/src/: lib.rs  models.rs  platform.rs
oar3-rust-scheduler/src/scheduler/: hierarchy.rs  kamelot.rs  quotas.rs  scheduling.rs  slot.rs  tests.rs
oar3-rust-scheduler/src/scheduler/tests/: quotas_test.rs  slot_test.rs  time_sharing_test.rs
oar3-scheduler/: Cargo.toml
oar3-scheduler-bench/: Cargo.toml
oar3-scheduler-bench/src/: adapter.py  benchmarker.rs  grapher.rs  main.rs  platform_mock.rs  python_caller.rs
oar3-scheduler-lib/: Cargo.toml  pyproject.toml
oar3-scheduler-lib/src/: converters.rs  lib.rs  platform.rs
oar3-scheduler/src/: models.rs  platform.rs
oar3-scheduler/src/scheduler/: hierarchy.rs  kamelot.rs  quotas.rs  scheduling.rs  slot.rs  tests.rs
oar3-scheduler/src/scheduler/tests/: container_test.rs  hierarchy_test.rs  placeholder_test.rs  platform_mock.rs  quotas_test.rs  slot_test.rs  time_sharing_test.rs
src/: benchmark.rs  benchmarker.rs  grapher.rs  kao.rs  main.rs  models.rs  platform.rs  scheduler.rs
src/benchmark/: adapter.py  benchmarker.rs  function_benchmark.rs  grapher.rs  oar_python_caller.rs  platform_mock.rs
src/kao/: kamelot_basic.rs  platform.rs  scheduling_basic.rs  slot.rs  tests.rs
src/kao/tests/: slot_test.rs
src/lib/: models.rs
src/models/: models.rs  models_db.rs
src/scheduler/: hierarchy.rs  kamelot.rs  kamelot_basic.rs  kamelot_tree.rs  quotas.rs  scheduling.rs  scheduling_basic.rs  scheduling_tree.rs  slot.rs  tests.rs  tree_slot.rs  tree_slotset.rs
src/scheduler/tests/: hierarchy_test.rs  quotas_test.rs  quotas_tree_test.rs  slot_test.rs  tree_slotset_test.rs
