[package]
name = "oar3-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
range-set-blaze = { version = "0.3.0", default-features = false }
prettytable-rs = "^0.10"
rand = "0.9.1"
plotters = "0.3.7"
tokio = { version = "1.46.0", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3.31"
