[package]
name = "oar3-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4"
range-set-blaze = { version = "0.3.0", default-features = false }
prettytable-rs = "^0.10"
rand = "0.9.1"
plotters = "0.3.7"
tokio = { version = "1.46.0", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3.31"
slab_tree = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
pyo3 = { version = "0.25", features = ["auto-initialize"] }
oar3-rust-macros = { path = "./oar3-rust-macros" }
lazy_static = "1.5.0"
colored = "3.0.0"

[profile.release]
lto = "fat"
compiler-units = 1
opt-level = "z"
panic = "abort"
strip = "debuginfo"
