[package]
name = "oar-scheduler-dao"
version = "0.1.0"
edition = "2024"

[features]
database = ["sqlx", "sea-query", "sea-query-sqlx"]

[dependencies]
log = "0.4.27"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
sea-query = { version = "1.0.0-rc.1", features = ["derive"], optional = true }
sea-query-sqlx = { version = "0.8.0-rc.8", features = ["sqlx-postgres"], optional = true }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
rand = "0.9.2"

