[package]
name = "oar-scheduler-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
oar-scheduler-core = { path = "../oar-scheduler-core" }
oar-scheduler-hooks = { path = "../oar-scheduler-hooks" }
oar-scheduler-dao = { path = "../oar-scheduler-dao", features = ["database"] }
