[package]
name = "oar-scheduler-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
oar-scheduler-core = { path = "../oar-scheduler-core" }
oar-scheduler-db = { path = "../oar-scheduler-db" }
oar-scheduler-hooks = { path = "../oar-scheduler-hooks" }
indexmap = "2.10.0"
dotenvy = "0.15.7"
tempfile = "3.21.0"
