[package]
name = "oar-scheduler-redox"
version = "0.1.0"
edition = "2024"

[lib]
name = "oar_scheduler_redox"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.10.0"
dotenvy = "0.15.7"
oar-scheduler-core = { path = "../oar-scheduler-core", features = ["pyo3", "pyo3-abi3-py38"] }
oar-scheduler-hooks = { path = "../oar-scheduler-hooks" }
pyo3 = { version = "0.25.0", features = ["abi3-py38"] }
log = "0.4.27"
env_logger = "0.11.8"
