[package]
name = "oar3-scheduler-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "oar3_scheduler_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["abi3-py38"] }
oar3-scheduler = { path = "../oar3-scheduler", features = ["pyo3", "pyo3-abi3-py38"] }
log = "0.4.27"
