[package]
name = "oar3-scheduler"
version = "0.1.0"
edition = "2024"

[features]
default = ["benchmark_disable", "benchmark_disable_hy"]
benchmark_disable = ["auto_bench_fct/disable"]
benchmark_disable_hy = ["auto_bench_fct/disable_hy"]
pyo3-abi3-py38 = ["pyo3/abi3-py38"]

[dependencies]
log = "0.4"
range-set-blaze = { version = "0.3.0", default-features = false }
indexmap = "2.10.0"
prettytable-rs = "^0.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.25", optional = true }
auto_bench_fct = { version = "1", features = ["log"] }
